# PortableFS

./: .new.pfs  README.md  __init__.py  appTst.pfs  apptst.py  assemblingFileData.py  designDoc.txt  designDocKey.txt  designDocV2.txt  dictTraversal.py  fileStructhard.py  flatteningStruct.py  macros.py  pyproject.toml  recTst.pfs  recursion.py  run.py  saving.py  sort.py  ssf2tst.py  upd.csh
package/: __init__.py  macros.py  setup.py
package/pfs/: __init__.py  macros.py
package/pfs.egg-info/: PKG-INFO  SOURCES.txt
src/pfs/: __init__.py  macros.py
src/pfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
