[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pfs"
version = "2.1.0"
description = "A Python implementation of the PortableFS Specification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tester",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]

[tool.uv.sources]
tester = { path = "../Testing-Suite/package" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = []